# txn-data

./: .gitignore  README.adoc  README.md  create_fx_price_table.sql  fx_transactions_with_rates.py  generate_fx_transactions_pdf.py  get_fx_rates_from_clickhouse.py  insert_fx_price_data.py  pdf-reader-check.py  pdf_to_csv_fx_transactions.py  read-pdf.py  requirements.txt  run_all.sh  search-medical.py  setup.py  setup.sh
flask-ui/: Readme.adoc  app.py  pyproject.toml
flask-ui/flask_ui/: __init__.py  config.py  models.py  views.py
flask-ui/templates/: base.html  create_user.html  list_users.html
